
Tue Aug 29 13:36:00 EDT 1995	Paul Park	(pjpark@mit.edu)
	* fcc_reslv.c - Set magic number in successfully resolved ccache.

Tue Jul 11 19:26:47 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* fcc-proto.h: Add prototype for krb5_fcc_read. Indicate that
		krb5_change_cache takes no arguments. 
	

Wed July  5 15:52:31 1995  James Mattly  <mattly@fusion.com>
	* fcc_destroy.c changed open to THREEPARAMOPEN for macintosh
	opens
	* fcc_gennew.c conditons for HAS_MACSOCK_H and THREEPARAMOPEN
	* fcc_maybe.c conditons for HAS_MACSOCK_H

Wed Jun 14 23:54:09 1995  Theodore Y. Ts'o  (tytso@dcl)

	* fcc_errs.c (krb5_fcc_interpret): Add #ifdef around switch
		statement for ETXTBUSY.

Sat Jun 10 00:01:23 1995  Theodore Y. Ts'o  <tytso@dcl>

	* fcc_init.c (krb5_fcc_initialize): Make sure the status return
	        from krb5_fcc_store_principal is reflected in the return
		status of krb5_fcc_initialize().

Fri Jun  9 19:30:01 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

	* fcc_maybe.c: Fix -Wall nits

Fri May 26 20:19:39 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, Makefile.in: Add support for building shared libraries.

Thu May 25 15:37:39 1995 Keith Vetter (keithv@fusion.com)

	* fcc_maybe.c: the NEED_SOCKETS has to be before the #include line.

Tue May 23 16:28:07 1995  Theodore Y. Ts'o  (tytso@dcl)

	* fcc_maybe.c: Rearrange #include files so that krb5.h gets
		included first, so that the debugging information can be
		more efficiently collapsed since the type numbers will be
		the same.

Tue May  9 16:23:39 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* fcc_close.c (krb5_fcc_close): Remove <malloc.h> as not all
		platforms have it and k5-int.h already takes care of
		malloc declarations.

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.[ch]: removed unneeded INTERFACE from non-api functions.

Wed Mar 22 11:24:07 1995 Keith Vetter (keithv@fusion.com)
