@@ -107,6 +107,7 @@ krb5_fcc_generate_new (context, id)
           goto err_out;
      } else {
 	  krb5_int16 fcc_fvno = htons(KRB5_FCC_DEFAULT_FVNO);
+	  krb5_int16 fcc_flen = 0;
 	  int errsave, cnt;
 
 	  /* Ignore user's umask, set mode = 0600 */
@@ -124,6 +125,17 @@ krb5_fcc_generate_new (context, id)
 	      (void) unlink(((krb5_fcc_data *) lid->data)->filename);
 	      retcode = (cnt == -1) ? krb5_fcc_interpret(context, errsave) : KRB5_CC_IO;
               goto err_out;
+	  }
+	  /* For version 4 we save a length for the rest of the header */
+	  if (KRB5_FCC_DEFAULT_FVNO == KRB5_FCC_FVNO_4) {
+	    if ((cnt = write(ret, (char *)&fcc_flen, sizeof(fcc_flen)))
+	        != sizeof(fcc_flen)) {
+	        errsave = errno;
+	        (void) close(ret);
+	        (void) unlink(((krb5_fcc_data *) lid->data)->filename);
+	        retcode = (cnt == -1) ? krb5_fcc_interpret(context, errsave) : KRB5_CC_IO;
+                goto err_out;
+	    }
 	  }
 	  if (close(ret) == -1) {
 	      errsave = errno;
